  * debian/control: Remove debianutils dependency, it's essential.
  * Drop backends/packaging-dpkg.py. It had some hackish usage of python-apt
    anyway, since some things just cannot be figured out with dpkg alone.
    Since we have to give up on that idea, implement a new clean packaging
    backend 'packaging-apt-dpkg.py' which now uses python-apt and dpkg in a
    clean way.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 03 May 2007 19:15:02 +0200

apport (0.77) gutsy; urgency=low

  * apport/report.py: Replace any() call with a list comprehension to work
    with Python < 2.5. (LP: #104864)
  * apport/report.py: Move the ctypes import to the one place where we
    actually need it, and do not entirely fail if they do not exist (such as
    in Python 2.4). It is only required for non-default Feisty kernels anyway.
    (LP: #107662)
  * apport/chroot.py: Fix test suite to work with Python 2.4's tarfile module
    output format.
  * debian/local/setup-apport-retracer: Generalized some feisty specific
    bits, set default release to gutsy.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 23 Apr 2007 12:22:17 +0200

apport (0.76) feisty; urgency=low

  * Move python_hook.py out of the apport module to apport_python_hook.py, so
    that it does not inflict the expensive import of all apport related
    modules to every python program. Adapt module prefixes accordingly.
    (LP: #105764)
  * setup.py, debian/python-apport.install: Install apport_python_hook.py into
    the python-apport binary package.
  * apport/ui.py test suite: Unset locale related environment variables so
    that the tests which check strings are not invalidated by translations.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 12 Apr 2007 11:47:50 +0200

apport (0.75) feisty; urgency=low

  * apport/report.py, add_proc_info(): Chop off /rofs/ prefix from
    ExecutablePath, so that crashes work on the live system, too. Arguably a